--- a/app/views/tempIntroduction.html
+++ b/app/views/tempIntroduction.html
@@ -42,11 +42,11 @@
 
         
         <!-- </br><p><small style="">Note: Access the silverlight version of OpenWeb in Internet Explorer browsers:</small></p> -->
-        </br><p><small style="">Note: Select features & functionality may only be accessible in silverlight version of Openweb, available in Internet Explorer browsers:</small></p>
+        </br><p><small style="">Legacy (IE):</small></p>
 
         <small><a id="introLink" href="http://gisgate.co.clark.nv.us/openweb/">gisgate.co.clark.nv.us/openweb/</a></small>
 
-        <small><a id="releasenotesLink" href="../resources/releasenotes.txt" target="_blank">Release notes</a></small>
+        <small><a id="releasenotesLink" href="http://gisgate.co.clark.nv.us/gismo/apps/mobile/ow4/app/resources/releasenotes.txt" target="_blank">Release notes</a></small>
         
 
         <!-- <a id="aGuideLink" href="../resources/AdvancedUseGuide.txt" target="_blank">Advanced Guide</a> -->
