--- a/app/css/themes/layout-county.css
+++ b/app/css/themes/layout-county.css
@@ -568,7 +568,7 @@ color: #ADADAD !important;
 
 
 
-#weatherDivCasing, #legendDivCasing {
+#weatherDivCasing, #legendDivCasing, #measureDivCasing {
 
   background-color: rgba(17, 63, 112, 0.96);
 }
@@ -597,3 +597,20 @@ color: #ADADAD !important;
 /*    color: white !important;
     font-weight: 700;*/
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
