--- a/app/css/propinfo-style.css
+++ b/app/css/propinfo-style.css
@@ -1,4 +1,9 @@
 
+/* ----------------------------------------------------------- */
+/* ------------------- propinfo-style.css -------------------- */
+/* ----------------------------------------------------------- */
+
+
 /*
 .ui-widget {
     font-family: Verdana,Arial,sans-serif;
@@ -42,12 +47,6 @@
 }
 
 */
-
-
-
-
-
-
 
 
 .ui-widget {
